# tiny-metal-nn

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  pyproject.toml  vcpkg.json
.claude/skills/: tcnn-to-tmnn.md
.github/workflows/: release.yml  test.yml
cmake/: Vcpkg.cmake  tiny_metal_nnConfig.cmake.in
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHECKPOINT-CONTRACT.md  ERROR-HANDLING.md  EXTENSIBILITY-DESIGN.md  QUICKSTART.md  TCNN-MIGRATION-GUIDE.md  VS-MLX-AND-TCNN.md
examples/: README.md
examples/migrated/sphere_sdf/: README.md
examples/migrated/sphere_sdf/tcnn/: train.py
examples/migrated/sphere_sdf/tmnn/: train.py
examples/sphere_sdf/: README.md  reference_metrics.json
examples/sphere_sdf/tcnn/: train.py
examples/sphere_sdf/tmnn/: train.py
include/tiny-metal-nn/: autotune_manifest.h  common.h  cpp_api.h  default_trainer.h  device_capabilities.h  diagnostics.h  encoding.h  evaluator.h  factory.h  factory_json.h  fully_fused_mlp.h  hash_grid.h  loss.h  metal_context.h  network.h  network_with_input_encoding.h  optimizer.h  rotated_hash_grid.h  runtime_policy.h  tiny-metal-nn.h  trainer.h  weight_init.h
include/tiny-metal-nn/detail/: adam.h  checkpoint_contract.h  cosine_loss.h  factory_json_detail.h  huber_loss.h  l1_loss.h  l2_loss.h  module.h  network_planning.h  runtime_authority.h  runtime_stats.h
include/tiny-metal-nn/extension/: dnl_adapter.h  four_d_adapter.h  kernel_compile_spec.h  multi_output_mlp_adapter.h  rmhe_adapter.h  schema.h  standard_sdf_adapter.h  training_adapter.h
include/tiny-metal-nn/kernels/: adam_kernel_msl.h  kernel_compiler.h  kernel_spec.h  mlp_kernel_emitter.h
samples/: CMakeLists.txt  mlp_learning_an_image.cpp
src/python/: tmnn_pybind.cpp
src/tiny_metal_nn/extension/: dnl_adapter.cpp  four_d_adapter.cpp  multi_output_mlp_adapter.cpp  rmhe_adapter.cpp  standard_sdf_adapter.cpp
src/tiny_metal_nn/kernels/: kernel_compiler.cpp  kernel_spec.cpp  mlp_kernel_emitter.cpp
src/tiny_metal_nn/runtime/: adam_params.h  autotune_manifest.cpp  autotune_search.cpp  autotune_search.h  buffer_arena.cpp  buffer_arena.h  buffer_handle.h  command_batch.cpp  command_batch.h  command_batch_test_access.h  default_trainer.cpp  default_trainer_policy.h  family_policy.h  kernel_dispatch_contract.h  metal_context.cpp  metal_context_internal.h  metal_device.h  metal_device.mm  metal_device_stub.cpp  metal_obj_ptr.h  morton_sort.h  network_planner.cpp  numerics_guard.cpp  numerics_guard.h  owned_buffer_handle.cpp  owned_buffer_handle.h  parameter_store.cpp  parameter_store.h  pipeline_registry.cpp  pipeline_registry.h  runtime_policy.h  step_lane_coordinator.cpp  step_lane_coordinator.h  training_step_execution.cpp  training_step_execution.h  training_step_lifecycle.cpp  training_step_lifecycle.h
src/tiny_metal_nn/runtime/metal_heap/: metal_heap.h  metal_heap.mm
tests/: CMakeLists.txt  LabelSlowTests.cmake
tests/benchmarks/: tmnn_runtime_benchmarks.cpp
tests/python/: README.md  conftest.py  test_examples_convergence.py  test_lifetime_torture.py  test_migrate_cli.py  test_migrate_rules.py  test_smoke.py  test_torch_interop.py
tests/smoke/: CMakeLists.txt  smoke_test.cpp
tests/unit/tmnn/: test_4d_adapter.cpp  test_autotune_manifest.cpp  test_autotune_search.cpp  test_buffer_arena.cpp  test_command_batch.cpp  test_command_batch_error.mm  test_default_trainer.cpp  test_dnl_adapter.cpp  test_documentation_claims.cpp  test_extension_sdk.cpp  test_factory_json.cpp  test_family_policy.cpp  test_field_evaluator.cpp  test_kernel_generation.cpp  test_metal_heap.mm  test_metal_obj_ptr.mm  test_multi_output_mlp_adapter.cpp  test_network_planning.cpp  test_numerics_guard.cpp  test_owned_buffer_handle.cpp  test_parameter_store.cpp  test_pipeline_registry.cpp  test_rmhe_adapter.cpp  test_runtime_skeleton.cpp  test_schema_buffer_geometry.cpp  test_standard_sdf_adapter.cpp  test_step_lane_coordinator.cpp  test_tmnn_core.cpp  test_training_step_execution.cpp  test_training_step_lifecycle.cpp
tiny_metal_nn/: __init__.py
tools/: migrate_rules.py  migrate_tcnn.py
